week08/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: httpserver-ingress
  annotations:
    kubernetes.io/ingress.class: "httpserver"
spec:
  tls:
    - hosts:
        - cncamp.com
      secretName: cncamp-tls
  rules:
    - host: cncamp.com
      http:
        pathType: Prefix
        backend:
          service:
            name: httpserver
            port:
              number: 8080
